@@ -6,6 +6,10 @@ PHP                                                                        NEWS
   . Fixed bug #75882 (a simple way for segfaults in threadsafe php just with
     configuration). (Anatol)
 
+- Date:
+  . Fixed bug #75928 (Argument 2 for `DateTimeZone::listIdentifiers()` should
+    accept `null`). (Pedro Lacerda)
+
 - PGSQL:
   . Fixed #75838 (Memory leak in pg_escape_bytea()). (ard_1 at mail dot ru)
 
